--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "extra": {
         "statamic": {
             "name": "Impersonator",
+            "slug": "impersonator",
             "description": "Give Admins the ability to authenticate as any user for easier debugging.",
             "version": "2.0.0"
         },
@@ -38,5 +39,10 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "pixelfear/composer-dist-plugin": true
+        }
+    }
 }
